--- a/templates/index.html
+++ b/templates/index.html
@@ -123,7 +123,7 @@
               </div>
 
           <!-- This is where the prediction will present         -->
-              <h3>Your wine rating a prediction is:</h3>
+              <h3>Your wine rating prediction is:</h3>
           <hr>
 
           <H1><div class="text-center" style="color: red" id="rating"></div></H1>
@@ -168,11 +168,11 @@
                     </tr>
                     <tr>
                       <th scope="row">Logistic Regression (Prediction)</th>
-                      <td></td>
+                      <b></b><td style="color: red"></td></b>
                     </tr>
                     <tr>
                       <th scope="row">Randam Forest (Prediction)</th>
-                      <td></td>
+                      <b><td style="color: red"></td></b>
                     </tr>
 
                   </tbody>  
